syntax = "proto3";

service Vioux {
  rpc RequestFrame(RequestFrameParameters) returns (RequestedFrame);
  rpc UpdateFrame(UpdateFrameParameters) returns (UpdatedFrame);
}

message RequestFrameParameters {}

message RequestedFrame { Image image = 1; }

message UpdateFrameParameters { Image image = 1; }

message UpdatedFrame {}

message Image {
  uint32 channels = 1;
  uint32 height = 2;
  uint32 width = 3;
  bytes raw = 4;
}